# gelos-lc

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt
configs/: exp001_prithvi300.yaml  exp001_prithvi300_noperturb.yaml  exp002_prithvi300_blue_perturb.yaml  exp003_prithvi300_nir_perturb.yaml  exp004_prithvi600.yaml  exp004_prithvi600_noperturb.yaml  exp005_prithvi600_blue_perturb.yaml  exp006_prithvi600_nir_perturb.yaml  exp007_terramind.yaml  exp007_terramind_noperturb.yaml  exp007_terramind_v1_base.yaml  exp008_terramind_blue_perturb.yaml  exp008_terramind_v1_base_blue_perturb.yaml  exp009_terramind_nir_perturb.yaml  exp009_terramind_v1_base_nir_perturb.yaml  exp010_terramind_v1_large.yaml  exp011_terramind_v1_base_s2_only.yaml  exp012_terramind_v1_large_s2_only.yaml  exp013_terramind_v1_base_s2_s1.yaml  exp014_terramind_v1_large_s2_s1.yaml  prithvieov2300_blueperturb.yaml  prithvieov2300_nirperturb.yaml  prithvieov2300_noperturb.yaml  prithvieov2600_blueperturb.yaml  prithvieov2600_nirperturb.yaml  prithvieov2600_noperturb.yaml  terramindv1base_blueperturb.yaml  terramindv1base_nirperturb.yaml  terramindv1base_noperturb.yaml  terramindv1base_noperturb_allbands.yaml
configs/comparisons/: knn_purity_all.yaml  models_four_patches_knn_purity.yaml  models_middle_patch_knn_purity.yaml  pca_ablation_all.yaml  prithvi_strategies_knn_purity.yaml  terramind_base_sensors_middle_patch_knn_purity.yaml  terramind_large_sensors_middle_patch_knn_purity.yaml
configs/v0.50.0/: exp001_prithvi300.yaml  exp002_prithvi300_blue_perturb.yaml  exp003_prithvi300_nir_perturb.yaml  exp004_prithvi600.yaml  exp005_prithvi600_blue_perturb.yaml  exp006_prithvi600_nir_perturb.yaml  exp007_terramind.yaml  exp008_terramind_blue_perturb.yaml  exp009_terramind_nir_perturb.yaml
configs/v0.50.1/: exp001_prithvi300.yaml  exp003_prithvi300_nir_perturb.yaml  exp004_prithvi600.yaml  exp007_terramind_v1_base.yaml  exp009_terramind_v1_base_nir_perturb.yaml  exp010_terramind_v1_large.yaml  exp011_terramind_v1_base_s2_only.yaml  exp012_terramind_v1_large_s2_only.yaml  exp013_terramind_v1_base_s2_s1.yaml  exp014_terramind_v1_large_s2_s1.yaml
docker/: 10-install-gelos.sh
docs/: mkdocs.yml
docs/docs/: index.md
models/: prithvi_eo_v2.py
notebooks/: 00_dwg_exploredataset.ipynb  00_exploredataset.ipynb  01_dwg_calculatestatistics.ipynb  02_dwg_generateembeddings.ipynb  03_dwg_analyzeembeddings.ipynb  03_dwg_visualizeembeddings.ipynb  04_dwg_generateappfiles.ipynb  04_dwg_randomforest.ipynb  05_dwg_cosinesimilarity.ipynb  06_dwg_noiseablation.ipynb  07_dwg_knnclassifier.ipynb  knn_classifier_test_all.py  linear_probe_test_all.py  random_forest_test_all.py
reports/: knn_test_knn_results.csv  linearprobe_test_linear_probe_results.csv  rf_test_random_forest_results.csv  test_knn_results.csv
scripts/: run_embeddings.sh
src/: calculate_statistics.py  gelosdataset_lc.py  plot_embeddings.py  pmtiles_generation.py  pmtiles_upload.py  statistics.py
tests/: test_data.py  utils.py
