[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "1.0.0"
description = "Implementation of Geospatial Exploration of Latent Embedding Space for Land Cover Dataset"
authors = [
  { name = "CGA" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true


[tool.pixi.workspace]
name = "gelos-lc"
description = "Implementation of Geospatial Exploration of Latent Embedding Space for Land Cover Dataset"
version = "0.1.0"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "~=3.11.0"
pytest = "*"
ruff = "*"
pip = "*"
terratorch = "1.1.1*"
pyarrow = "*"
typer = "*"
tqdm = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
rioxarray = "*"
scikit-learn = "*"
geopandas = "*"
pillow = "*"
jupyterlab = "*"
python-dotenv = "*"
mkdocs = "*"
timm = "*"
einops = "*"
loguru = "*"
umap-learn = ">=0.5.11,<0.6"

[tool.pixi.pypi-dependencies]
awscli = "*"
mkdocs = "*"
python-dotenv = "*"

[tool.pixi.pypi-dependencies.src]
path = "."
editable = true

[tool.pixi.pypi-dependencies.gelos]
git = "https://github.com/ClarkCGA/gelos.git"
branch = "main"

# CPU-only pytorch for the default environment
[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

# CUDA feature: use `pixi shell -e cuda` for local GPU support
[tool.pixi.feature.cuda]
channels = ["conda-forge", "pytorch"]

[tool.pixi.feature.cuda.dependencies]
pytorch = {version = "2.*", channel = "pytorch"}
torchvision = {version = "*", channel = "pytorch"}
pytorch-cuda = {version = "12.*", channel = "pytorch"}

[tool.pixi.environments]
default = {features = ["cpu"], solve-group = "default"}
cuda = {features = ["cuda"], solve-group = "cuda"}
